force-app/main/default/objects/Course_Enrolled__c/Course_Enrolled__c.object-meta.xml
<CustomObject>
    <label>Course Enrolled</label>
    <nameField>
        <label>Student Enrolled Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Enrolleds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>