force-app/main/default/objects/Course_Enrolled__c/fields/CC_Spoc__c.field-meta.xml
<CustomField>
    <fullName>CC_Spoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Spoc</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Enrolleds</relationshipName>
    <type>Lookup</type>
</CustomField>