force-app/main/default/objects/Course_Enrolled__c/fields/GP_SPOC__c.field-meta.xml
<CustomField>
    <fullName>GP_SPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GP SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Enrolleds1</relationshipName>
    <type>Lookup</type>
</CustomField>