force-app/main/default/objects/Course_Enrolled__c/fields/Stages__c.field-meta.xml
<CustomField>
    <fullName>Stages__c</fullName>
    <label>Stages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>stages</valueSetName>
    </valueSet>
</CustomField>