force-app/main/default/objects/Course_Enrolled__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Course Enrolleds</relationshipLabel>
    <relationshipName>Course_Enrolleds</relationshipName>
    <type>Lookup</type>
</CustomField>