force-app/main/default/objects/Course_Enrolled__c/recordTypes/CMA.recordType-meta.xml
<RecordType>
    <fullName>CMA</fullName>
    <active>true</active>
    <label>CMA</label>
</RecordType>