force-app/main/default/objects/Course_Enrolled__c/recordTypes/CPA.recordType-meta.xml
<RecordType>
    <fullName>CPA</fullName>
    <active>true</active>
    <label>CPA</label>
</RecordType>