force-app/main/default/objects/Course_Enrolled__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Student__c</columns>
    <columns>CC_Spoc__c</columns>
    <columns>Phone__c</columns>
    <columns>Course__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Stages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>